# ScrapperZuzikus

./: .env.example  .gitignore  Dockerfile  Dockerfile.browser  MICROSERVICES.md  README.md  docker-compose.yml  pyproject.toml  recipes.md
.claude/: settings.local.json
app/: config.py  db.py  main.py  models.py  schemas.py  seed.py  tasks.py  worker.py
app/routers/: api.py  ui.py
app/services/: browser_crawler.py  category_recipes.py  company_dedupe.py  crawler.py  discovery_state.py  email_validator_client.py  host_suppression.py  metrics.py  overpass.py  pipeline.py  proxy_pool.py  recipe_clusters.py  recipe_drafts.py  recipe_lint.py  recipe_performance.py  recipe_planner.py  recipe_prompt_normalization.py  recipe_prompt_variants.py  recipe_validation.py  recipe_variants.py  region_catalog.py  run_companies.py  runs.py  runtime_schema.py  source_ingestion.py  taxonomy.py  taxonomy_generation.py  usage.py
app/static/: styles.css
app/templates/: categories.html  dashboard.html  metrics.html  proxies.html  recipe_evals.html  recipes.html  regions.html
emailvalidator/emailvalidator/: README.md  docker-compose.yml  pyproject.toml
emailvalidator/emailvalidator/app/: main.py
emailvalidator/emailvalidator/app/api/: deps.py  routes.py  schemas.py
emailvalidator/emailvalidator/app/db/: models.py
emailvalidator/emailvalidator/app/validators/: __init__.py  catchall.py  disposable.py  domain.py  proxy.py  scorer.py  smtp.py  syntax.py  types.py  typo.py
emailvalidator/emailvalidator/app/workers/: proxy_pool.py  tasks.py
emailvalidator/emailvalidator/docker/: Dockerfile
emailvalidator/emailvalidator/tests/: conftest.py  test_api.py  test_catchall.py  test_disposable.py  test_domain.py  test_proxy.py  test_scorer.py  test_smtp.py  test_syntax.py  test_tasks.py  test_typo.py
maps_scraper_v3/: Dockerfile  app.py  docker-compose.yml  requirements.txt
maps_scraper_v3/templates/: index.html
ops/: overpass-entrypoint.sh
wa-verifier/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
wa-verifier/python-api/: Dockerfile  (+2 more)
(+17 files in other folders)
