[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scrapper-zuzikus"
version = "0.1.0"
description = "Lead discovery and email extraction for rental and travel agencies"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.12.3,<5.0.0",
  "dramatiq[redis]>=1.17.1,<2.0.0",
  "email-validator>=2.2.0,<3.0.0",
  "fastapi>=0.115.8,<1.0.0",
  "httpx>=0.28.1,<1.0.0",
  "jinja2>=3.1.5,<4.0.0",
  "psycopg[binary]>=3.2.6,<4.0.0",
  "pydantic-settings>=2.8.1,<3.0.0",
  "pycountry>=24.6.1,<25.0.0",
  "python-multipart>=0.0.20,<1.0.0",
  "sqlalchemy>=2.0.39,<3.0.0",
  "uvicorn[standard]>=0.34.0,<1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
